--- a/course-manager-client-react/package.json
+++ b/course-manager-client-react/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "array.prototype.move": "0.0.4",
     "bootstrap": "^4.1.1",
+    "css-toggle-switch": "^4.1.0",
     "font-awesome": "^4.7.0",
     "radium": "^0.24.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
